# parasol

./: .gitignore  .gitmodules  AGENTS.md  API_REFERENCE.md  README.md  WS_PROTOCOL.md  app.js  app.min.js  build.sh  index.html  manifest.json  package-lock.json  package.json  parasol_config.json  playwright.config.js
.github/workflows/: ci.yml
components/: gpio.json  wifi.json
components/parasol/: CMakeLists.txt  library.json
components/parasol/cmake/: generate_assets.cmake
components/parasol/examples/basic/: main.c
components/parasol/include/: prsl.h
components/parasol/scripts/: generate_assets.py
components/parasol/src/: prsl.cpp  prsl_json.c  prsl_json.h  prsl_store.c  prsl_store.h  prsl_ws.cpp  prsl_ws.h
components/parasol/test/: CMakeLists.txt  test_prsl_json.c  test_prsl_store.c
components/parasol/test/stub/: freertos_stub.h
components/pico-settings/: CMakeLists.txt  library.json
components/pico-settings/examples/basic/: main.c
components/pico-settings/include/: pwui.h
components/pico-settings/src/: pwui.cpp  pwui_assets.c  pwui_assets.h  pwui_json.c  pwui_json.h  pwui_store.c  pwui_store.h  pwui_ws.cpp  pwui_ws.h
components/pico-settings/test/: CMakeLists.txt  test_pwui_json.c  test_pwui_store.c
components/pico-settings/test/stub/: esp_err.h
docs/reference/: field-format.md
docs/superpowers/plans/: 2026-06-15-esp32-config-ui.md  2026-06-16-form-validation.md  2026-06-19-phase4-unified-settings.md  2026-06-19-phase5-server-dirty.md  2026-06-19-phase6-websocket.md  2026-06-23-remove-checkbox-type.md  2026-06-26-checkbox-revival.md  2026-06-27-edge-cases-audit.md  2026-06-28-pico-settings-backend.md  2026-07-04-pico-settings-test-plan.md  2026-07-05-c-compatibility-fixes.md  2026-07-07-esp32-integration-fixes.md  2026-07-07-status-prefix-ci-docs.md  2026-07-08-api-reference-docs.md  2026-07-08-per-field-storage-callbacks.md  2026-07-09-parasol-api-redesign.md  2026-07-12-branch-consolidation.md  2026-07-12-ci-e2e-fix.md
docs/superpowers/plans/ref/: phase4-e2e-tests.js  phase4-unit-tests.js
docs/superpowers/reference/: settings-json-format.md
docs/superpowers/specs/: 2026-06-15-esp32-config-ui-design.md  2026-06-15-footer-actions-design.md  2026-06-16-form-validation-design.md  2026-06-18-unified-settings-design.md  2026-06-23-backlog-triage.md  2026-06-23-checkbox-archive.md  2026-06-23-status-variables-design.md  2026-06-24-code-issues.md  2026-06-26-checkbox-revival-design.md  2026-06-27-pico-settings-backend-design.md  2026-07-07-platformio-distribution.md  2026-07-09-parasol-api-redesign.md  2026-07-16-audit-fixes-design.md  2026-07-16-codebase-cleanup-design.md  2026-07-18-variable-architecture-design.md  2026-07-19-reboot-button-and-v060-release-design.md
test-deps/: setup.sh
test_server/: main.py  requirements.txt  test_main.py
tests/: setup.js
tests/e2e/: app.test.js
tests/unit/: app.test.js
